<resources>
    <string name="app_name">CSS</string>
    <string name="textocss">
        "¿Qué es CSS?\n\n"
        "CSS es un lenguaje utilizado en la presentación de documentos HTML. Un documento HTML viene siendo coloquialmente “una página web”. Así, podemos decir que el lenguaje CSS sirve para dotar de presentación y aspecto, de “estilo”, a una página web. Este lenguaje es principalmente utilizado por parte de diseñadores y programadores web para elegir multitud de opciones de presentación como colores, tipos y tamaños de letra, imágenes de fondo, bordes,  etc."
    "\n\nBreve historia de CSS\n\n"
        "Las hojas de estilos aparecieron poco después que el lenguaje de etiquetas SGML, alrededor del año 1970. Desde la creación de SGML, se observó la necesidad de definir un mecanismo que permitiera aplicar de forma consistente diferentes estilos a los documentos electrónicos.\n" +
        "El gran impulso de los lenguajes de hojas de estilos se produjo con el boom de Internet y el crecimiento exponencial del lenguaje HTML para la creación de documentos electrónicos. La guerra de navegadores y la falta de un estándar para la definición de los estilos dificultaban la creación de documentos con la misma apariencia en diferentes navegadores.\n\n"
        "\n\nCaracterísticas  y ventajas de CSS\n\n"
        "El modo de fucionamiento de las CSS consiste en definir, mediante una sintaxis especial, la forma de presentación que le aplicaremos a:\n"
        "● Un web entero, de modo que se puede definir la forma de todo el web de una sola vez.\n"
        "● Un documento HTML o página, se puede definir la forma, en un pequeño trozo de código en la cabecera, a toda la página.\n"
        "● Una porción del documento, aplicando estilos visibles en un trozo de la página.\n"
        "● Una etiqueta en concreto, llegando incluso a poder definir varios estilos diferentes para una sola etiqueta. Esto es muy importante ya que ofrece potencia en nuestra programación. Podemos definir, por ejemplo, varios tipos de párrafos: en rojo, en azul, con margenes, sin ellos...\n"
        "La potencia de la tecnología salta a la vista. Pero no solo se queda aquí, ya que además esta sintaxis CSS permite aplicar al documento formato de modo mucho más exacto. Si antes el HTML se nos quedaba corto para maquetar las páginas y teníamos que utiliza trucos para conseguir nuestros efectos, ahora tenemos muchas más herramientas que nos permiten definir esta forma:\n\n"
        "● Podemos definir la distancia entre líneas del documento.\n"
        "● Se puede aplicar identado a las primeras líneas del párrafo.\n"
        "● Podemos colocar elementos en la página con mayor precisión, y sin lugar a errores.\n"
        "● Y mucho más, como definr la visivilidad de los elementos, margenes, subrallados, tachados...\n"
        "Y seguimos mostrandoos ventajas, ya que si con el HTML tan sólo podíamos definir atributos en las páginas con pixeles y porcentajes, ahora podemos definir utilizando muchas más unidades como:\n"
        "● Pixels (px) y porcentaje (%), como antes.\n"
        "● Pulgadas (in)\n"
        "● Puntos (pt)\n"
        "● Centímetros (cm);"
        "\n\nNavegadores que soportan CSS\n\n"
        "Esta tecnología es bastante nueva, por lo que no todos los navegadores la soportan. En concreto, sólo los navegadores de Netscape versiones de la 4 en adelante y de Microsoft a partir de la versión 3 son capaces de comprender los estilos en sintaxis CSS. Además cabe destacar que no todos los navegadores implementan las mismas funciones de hojas de estilos, por ejemplo, Microsoft Internet Explorer 3 no soporta todo lo relativo a capas.\n"
        "Esto quiere decir que debemos de usar esta tecnología con cuidado, ya que muchos usuarios no podrán ver los formatos que apliquemos a las páginas con CSS. Así pues, utilizad las hojas de estilos cuando estas no vayan a suponer un problema. "
        "Los navegadores Firefox, Chrome, Safari y Opera son los más avanzados en el soporte de CSS, ya que incluyen muchos elementos de la futura versión CSS 3 y un soporte casi perfecto de la actual version 2.1.\n"
        "\n"
        "Por su parte, el navegador Internet Explorer sólo puede considerarse adecuado desde el punto de vista de CSS a partir de su versión 7. Internet Explorer 6, utilizado todavía por un número no despreciable de usuarios, sufre carencias muy importantes y contiene decenas de errores en su soporte de CSS. Internet Explorer 8 soporta casi todas las propiedades y características de CSS 2.1."
    </string>
    <string name="css2">"Selectores universal\n\nEl selector universal se marca con un asterisco “*” y abarca a todos los elementos del documento XHTML. El siguiente ejemplo aplicaría un fondo amarillo a todos los elementos que soportasen la propiedad background-color salvo que se usase un selector más específico que lo sobrescriba.\n"
        "* { background-color: yellow; }\n"
        "El siguiente ejemplo podría ser aplicado a todos los elementos del documento XHTML que tengan como nombre de clase enfatizado (class=\"enfatizado\")\n"
        "*.enfatizado {background-color: blue;}\n"
        "Cuando el asterisco forma parte de un patrón, como en el ejemplo anterior, puede ser omitido tranquilamente. Un patrón de .enfatizado sería igual de efectivo que *.enfatizado\n"
        "Se utiliza para seleccionar todos los elementos de la página. El siguiente ejemplo elimina el margen y el relleno de todos los elementos HTML (por ahora no es importante fijarse en la parte de la declaración de la regla CSS):\n"
        "\n\n"
        "* {\n\n"
        "  margin: 0;\n\n"
        "  padding: 0;\n\n"
        "}\n\n"
"Los selectores por tipo \n\nLos selectores por tipo afectan a todas las apariciones de un elemento en el documento XHTML. El siguiente ejemplo aplica un fondo blanco a todos los elementos &lt;p&gt; del documento.\n"
        "p {background-color: white;}\n"
        "Cuando varios selectores van a compartir el bloque de declaraciones, los selectores pueden ser agrupados separándolos con una coma. El siguiente ejemplo aplicará un fond o negro a todos los elementos &lt;h1&gt; y &lt;h2&gt;\n\n"
        "h1, h2 {background-color: black;}\n"
"Si se considera el siguiente código HTML de ejemplo:\n"
        "\n"
        "&lt;body&gt;\n"
        "  &lt;p&gt;Lorem ipsum dolor sit amet...&lt;/p&gt;\n"
        "  &lt;p&gt;Nunc sed lacus et est adipiscing accumsan...&lt;/p&gt;\n"
        "  &lt;p&gt;Class aptent taciti sociosqu ad litora...&lt;/p&gt;\n"
        "&lt;/body&gt;\n"
        "¿Cómo se pueden aplicar estilos CSS sólo al primer párrafo? El selector universal (*) no se puede utilizar porque selecciona todos los elementos de la página. El selector de tipo o etiqueta (p) tampoco se puede utilizar porque seleccionaría todos los párrafos. Por último, el selector descendente (body p) tampoco se puede utilizar porque todos los párrafos se encuentran en el mismo sitio.\n"
        "\n"
        "Una de las soluciones más sencillas para aplicar estilos a un solo elemento de la página consiste en utilizar el atributo class de HTML sobre ese elemento para indicar directamente la regla CSS que se le debe aplicar:\n"
        "\n"
        "&lt;body&gt;\n"
        "  &lt;p class=\"destacado\"&gt;Lorem ipsum dolor sit amet...&lt;/p&gt;\n"
        "  &lt;p&gt;Nunc sed lacus et est adipiscing accumsan...&lt;/p&gt;\n"
        "  &lt;p&gt;Class aptent taciti sociosqu ad litora...&lt;/p&gt;\n"
        "&lt;/body&gt;\n"
        "A continuación, se crea en el archivo CSS una nueva regla llamada destacado con todos los estilos que se van a aplicar al elemento. Para que el navegador no confunda este selector con los otros tipos de selectores, se prefija el valor del atributo class con un punto (.) tal y como muestra el siguiente ejemplo:\n"
        "\n"
        ".destacado { color: red; }\n"
        "El selector .destacado se interpreta como \"cualquier elemento de la página cuyo atributo class sea igual a destacado\", por lo que solamente el primer párrafo cumple esa condición.\n"
        "\n"
        "Este tipo de selectores se llaman selectores de clase y son los más utilizados junto con los selectores de ID que se verán a continuación. La principal característica de este selector es que en una misma página HTML varios elementos diferentes pueden utilizar el mismo valor en el atributo class:\n"
        "\n"
        "&lt;body&gt;\n"
        "  &lt;p class=\"destacado\"&gt;Lorem ipsum dolor sit amet...&lt;/p&gt;\n"
        "  &lt;p&gt;Nunc sed lacus et &lt;a href=\"#\" class=\"destacado\"&gt;est adipiscing&lt;/a&gt; accumsan...&lt;/p&gt;\n"
        "  &lt;p&gt;Class aptent taciti &lt;em class=\"destacado\"&gt;sociosqu ad&lt;/em&gt; litora...&lt;/p&gt;\n"
        "&lt;/body&gt;\n"
        "Selector por clase\n\nLos selectores de clase son imprescindibles para diseñar páginas web complejas, ya que permiten disponer de una precisión total al seleccionar los elementos. Además, estos selectores permiten reutilizar los mismos estilos para varios elementos diferentes."
"En ocasiones, es necesario aplicar estilos CSS a un único elemento de la página. Aunque puede utilizarse un selector de clase para aplicar estilos a un único elemento, existe otro selector más eficiente en este caso.\n"
        "\n"
        "Selectores ID\n\nEl selector de ID permite seleccionar un elemento de la página a través del valor de su atributo id. Este tipo de selectores sólo seleccionan un elemento de la página porque el valor del atributo id no se puede repetir en dos elementos diferentes de una misma página.\n"
        "\n"
        "La sintaxis de los selectores de ID es muy parecida a la de los selectores de clase, salvo que se utiliza el símbolo de la almohadilla (#) en vez del punto (.) como prefijo del nombre de la regla CSS:\n"
        "\n"
        "#destacado { color: red; }\n"
        " \n"
        "&lt;p&gt;Primer párrafo&lt;/p&gt;\n"
        "&lt;p id=\"destacado\"&gt;Segundo párrafo&lt;/p&gt;\n"
        "&lt;p&gt;Tercer párrafo&lt;/p&gt;\n"
        "En el ejemplo anterior, el selector #destacado solamente selecciona el segundo párrafo (cuyo atributo id es igual a destacado)."
</string>
    <string name="musica">Música de Fondo</string>
    <string name="videoo">Video</string>
    <string name="salir">Salir</string>
    <string name="desarrollo">Desarrolladora</string>
    <string name="configuracion">Configuración</string>
    <string name="grafica">Grafica</string>
    <string name="teme">Temas</string>
</resources>